fixed paddings and margins on mobile resolution

--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -28,6 +28,11 @@
      &__content {
        align-items: center;
      }
+
+     &__number-search {
+      margin-bottom: 50px;
+     }
+
      &__slogan {
        margin-left: 0;
      }
