--- a/src/pages/user-sign-in/user-sign-in.scss
+++ b/src/pages/user-sign-in/user-sign-in.scss
@@ -8,4 +8,8 @@
     max-width: 380px;
     margin: 0 auto;
   }
+  
+  @media screen and (max-width: $mediumBreakpoint) {
+    padding: 50px 0; 
+  }
 }
